Played around with Contract and NotNull Annotations