@@ -8,7 +8,6 @@ import project.docmaker.utility.stringutils.StringController;
 import java.text.MessageFormat;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 import static project.docmaker.utility.stringutils.StringController.TAB;
 
@@ -23,18 +22,17 @@ public record Section(Header header, Body body, Code code) implements MarkdownSt
 
 
 	/**
-	 * Generates and returns a {@link Collection} of {@link String} which represents the instance in its current state.
-	 *
-	 * @return A {@link Collection} of {@link String} which represents the object in its current state.
+	 * {@inheritDoc}
 	 */
 	@Override
+
 	public @NotNull Collection<String> toStringCollection ()
 	{
 		final Collection<String> objectInformation = new ArrayList<>();
-		objectInformation.add("Instance: " + this.toString());
-		objectInformation.addAll(this.header.toStringCollection().stream().map(c -> TAB + c).collect(Collectors.toList()));
-		objectInformation.addAll(this.body.toStringCollection().stream().map(c -> TAB + c).collect(Collectors.toList()));
-		objectInformation.addAll(this.code.toStringCollection().stream().map(c -> TAB + c).collect(Collectors.toList()));
+		objectInformation.add(MessageFormat.format("Instance: {0}", this.toString()));
+		objectInformation.addAll(this.header.toStringCollection().stream().map(descriptorString -> TAB + descriptorString).toList());
+		objectInformation.addAll(this.body.toStringCollection().stream().map(descriptorString -> TAB + descriptorString).toList());
+		objectInformation.addAll(this.code.toStringCollection().stream().map(descriptorString -> TAB + descriptorString).toList());
 		return objectInformation;
 	}
 
@@ -43,30 +41,30 @@ public record Section(Header header, Body body, Code code) implements MarkdownSt
 	 * {@inheritDoc}
 	 */
 	@Override
-	public String toString ()
+	public @NotNull String toMarkdown ()
 	{
-		return MessageFormat.format(TEXT_DISPLAY_PATTERN, this.getClass().getSimpleName(), Integer.toHexString(this.hashCode()));
+		final StringBuilder stringBuilder = new StringBuilder();
+
+		stringBuilder.append(this.header.toMarkdown());
+		stringBuilder.append(StringController.NEW_LINE);
+
+		stringBuilder.append(this.body.toMarkdown());
+		stringBuilder.append(StringController.NEW_LINE);
+
+		stringBuilder.append(this.code.toMarkdown());
+		stringBuilder.append(StringController.NEW_LINE);
+
+		stringBuilder.append("---").append(StringController.NEW_LINE);
+		return stringBuilder.toString();
 	}
 
 
 	/**
-	 * Generates and returns a formatted {@link String} which represents the instance in its current state and as a Markdown string.
-	 *
-	 * @return A formatted {@link String} which represents the instance in its current state and as a Markdown string.
+	 * {@inheritDoc}
 	 */
 	@Override
-	public @NotNull String toMarkdown ()
+	public @NotNull String toString ()
 	{
-		final StringBuilder stringBuilder = new StringBuilder();
-		if (this.header == Header.EMPTY)
-		{
-			return "";
-		}
-		stringBuilder.append(this.header.toMarkdown());
-		stringBuilder.append(StringController.NEW_LINE);
-		stringBuilder.append(this.body.toMarkdown());
-		stringBuilder.append(this.code().toMarkdown());
-		stringBuilder.append(StringController.NEW_LINE).append("---").append(StringController.NEW_LINE);
-		return stringBuilder.toString();
+		return MessageFormat.format(TEXT_DISPLAY_PATTERN, this.getClass().getSimpleName(), Integer.toHexString(this.hashCode()));
 	}
 }
